RESOLVED FIXED134246
REGRESSION(r170235): Remove incorrect ifdef guard
https://bugs.webkit.org/show_bug.cgi?id=134246
Summary REGRESSION(r170235): Remove incorrect ifdef guard
Éva Balázsfalvi
Reported 2014-06-24 03:09:41 PDT
Removr unnecessary #if guard which remained in the code while removing PAGE_VISIBILITY_API compile guard. > Source/WebKit/mac/WebView/WebView.mm:4328 > #if ENABLE(HIDDEN_PAGE_DOM_TIMER_THROTTLING) > if (_private->page) > return kit(_private->page->visibilityState()); > #endif
Attachments
Patch (1.20 KB, patch)
2014-06-24 03:12 PDT, Éva Balázsfalvi
no flags
Éva Balázsfalvi
Comment 1 2014-06-24 03:12:46 PDT
Csaba Osztrogonác
Comment 2 2014-06-24 03:23:44 PDT
(In reply to comment #1) > Created an attachment (id=233692) [details] > Patch https://bugs.webkit.org/show_bug.cgi?id=133844#c4 > -#if ENABLE(PAGE_VISIBILITY_API) || ENABLE(HIDDEN_PAGE_DOM_TIMER_THROTTLING) > +#if ENABLE(HIDDEN_PAGE_DOM_TIMER_THROTTLING) I agree, this guard is really unnecessary, "true || FOO" is always true.
Csaba Osztrogonác
Comment 3 2014-06-24 03:24:15 PDT
Comment on attachment 233692 [details] Patch LGTM, r=me. Thanks for the quick fix.
WebKit Commit Bot
Comment 4 2014-06-24 04:03:07 PDT
Comment on attachment 233692 [details] Patch Clearing flags on attachment: 233692 Committed r170358: <http://trac.webkit.org/changeset/170358>
WebKit Commit Bot
Comment 5 2014-06-24 04:03:13 PDT
All reviewed patches have been landed. Closing bug.
Enrica Casucci
Comment 6 2014-06-24 10:21:27 PDT
This breaks the build for all the platforms that do not enable HIDDEN_PAGE_DOM_TIMER_THROTTLING. You removed the #ifdef but you left it around the kit function on line 521.
Csaba Osztrogonác
Comment 7 2014-06-24 10:35:57 PDT
(In reply to comment #6) > This breaks the build for all the platforms that do not enable HIDDEN_PAGE_DOM_TIMER_THROTTLING. > You removed the #ifdef but you left it around the kit function on line 521. In this case the original guarding was incorrect. This call was guarded with "#if ENABLE(PAGE_VISIBILITY_API) || ENABLE(HIDDEN_PAGE_DOM_TIMER_THROTTLING)". But now there isn't PAGE_VISIBILITY_API guard, so we need this kit call unconditionally. Should we remove guards around kit function core?
Csaba Osztrogonác
Comment 8 2014-06-24 10:48:14 PDT
Thanks for the fix landed in https://trac.webkit.org/changeset/170372 .
Note You need to log in before you can comment on or make changes to this bug.