REGRESSION(r170235): Remove incorrect ifdef guard https://bugs.webkit.org/show_bug.cgi?id=134246

Patch by Eva Balazsfalvi <evab.u-szeged@partner.samsung.com> on 2014-06-24
Reviewed by Csaba Osztrogonác.

* WebView/WebView.mm:
(-[WebView _visibilityState]):

Canonical link: https://commits.webkit.org/152216@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170358 268f45cc-cd09-0410-ab3c-d52691b4dbfc